# gra

./: .gitignore  .gitmodules  README.md  cones2.xml  driverless_startup.service  driverless_startup.sh  fix_permissions.sh  frames.dot
.devcontainer/: .bashrc  Dockerfile  apt-get-wrapper.sh  convenience.sh  devcontainer.json  devcontainer.metadata  devcontainer.metadata_template  devcontainer_template.json  docker-compose.yml  env_vars.sh  post_create.sh
.devcontainer/.ssh/: README.md  id_rsa  id_rsa.pub
.devcontainer/convenience/: arduino_shortcuts.sh  catkin_shortcuts.sh  depends.sh  dockerfile_emu.sh  echo_color.sh  grainfo.sh  logging.sh  master_switching.sh  persistent_exports.sh  quick_navigation.sh  rbc_shortcuts.sh  rbcinfo.sh  refreshenv.sh  remote_bot_utils.sh  ros_env.sh  rosbash_enhancements.sh  run_in_dir.sh
.devcontainer/native_install/: docker2sh.py  native_install.sh  native_install_sudo.sh
.devcontainer/patches/: README.md  hdl_graph_slam.patch
.github/: pull_request_template.md
api_test/: RosCan.cpp  test.c
bot_scripts/: env.sh  install.sh  install_sudo.sh  roscore.service  uninstall.sh
circuits/: MCU.kicad_sch  fp-lib-table  motor_shields.kicad_sch  power_module.kicad_sch  rbc_circuits.kicad_pcb  rbc_circuits.kicad_pro  rbc_circuits.kicad_sch  sym-lib-table  ugs_logo.kicad_mod  utility.kicad_sch  with_ugs.kicad_wks
circuits/PCBA files/: rbc2 BOM.xlsx
circuits/components/A000067/: A000067.kicad_sym  ARDUINO_A000067.kicad_mod
circuits/decals/: ugs.kicad_mod
circuits/decals/decals.pretty/: ugs.kicad_mod
circuits/rbc Custom Library.pretty/: Infineon_PG-TSDSO-14-22_custom.kicad_mod  KTW0007B_custom.kicad_mod
controller/: README.md  controller.ino
controller/src/: defs.h
controller/src/states/: motor_state.h  robot_state.h
controller/src/updaters/: acceleration_bounder.h  motor.h  (+5 more)
doc/: modify_hardware_comms.md
gazebo_world_building/: Instructions.txt  README.md  cones
recordings/: README.md
recordings/paper_towel_and_box/: rotating_sensor_30s.bag  static_30s.bag
ros/: README.md
ros/ackermann_vehicle_description/: CMakeLists.txt  package.xml
ros/ackermann_vehicle_description/launch/: ackermann_vehicle.launch  ackermann_vehicle_hokuyo.launch  ackermann_vehicle_rviz.launch  ads_dv_hokuyo.launch  ads_dv_real.launch  ads_dv_sim.launch  hokuyo_odom.launch  rviz.launch  sensors.launch  wheel_odom_test.launch
ros/ackermann_vehicle_description/meshes/: ads-dv.stl
ros/ackermann_vehicle_description/scripts/: odom_init_publisher.py  odom_publisher.py  sensors.rviz  sensors_3rdP.rviz  time_jump.py
ros/ackermann_vehicle_description/urdf/: ads_dv.urdf.xacro  em_3905.urdf.xacro  em_3905_hokuyo.urdf.xacro
ros/ackermann_vehicle_gazebo/: CMakeLists.txt
ros/ackermann_vehicle_navigation/: CMakeLists.txt
ros/ai2vcu/: CMakeLists.txt  package.xml
ros/cone_detection/: CMakeLists.txt  README.md
ros/fsai_api/: CMakeLists.txt  package.xml
ros/fsai_api/FS-AI_API/FS-AI_API_Console/: fs-ai_api_console.c
ros/fsai_api/launch/: ads_dv_start.launch
ros/fsai_api/msg/: VCU2AI.msg
ros/fsai_api/scripts/: speed_controller.py  wheel_speed_controller.py
ros/fsai_api/src/: ackermann_can.cpp  ai2vcu_node.cpp  handshake_can.cpp  ros_can.cpp  static inspection A.cpp  static_inspection_A.cpp
ros/fsai_mission/: CMakeLists.txt  package.xml
ros/fsai_mission/launch/: acceleration.launch  autocross.launch  autonomous_demo.launch  skidpad.launch  static_inspection_A.launch  static_inspection_B.launch  trackdrive.launch
ros/fsai_mission/scripts/: acceleration_finish.py  acceleration_supervisor.py  autocross_supervisor.py  autonomous_demo.py  autonomous_demonstartion.py  lap_counter.py  mission_supervisor.py  static_inspection_A.py  static_inspection_B.py  trackdrive_supervisor.py
ros/gra_base/: CMakeLists.txt  package.xml
ros/gra_core/: CMakeLists.txt  package.xml
ros/gra_dev/: CMakeLists.txt  package.xml
ros/gra_manager/: CMakeLists.txt  package.xml
ros/gra_navigation/: CMakeLists.txt  package.xml
ros/gra_recording/: CMakeLists.txt  package.xml
ros/gra_recording/launch/: field_record.launch  live_decompress_depth_camera.launch  record.launch  rviz.launch  rviz_compressed_depth_camera.launch
ros/gra_recording/rviz/: compressed_depth.rviz  lidar_compressedDepth.rviz
ros/gra_test/: CMakeLists.txt  package.xml
ros/gra_web_interface/: CMakeLists.txt  _package.xml
ros/lidar_vision/: CMakeLists.txt  package.xml
ros/rbc_base/: CMakeLists.txt  package.xml
ros/rbc_base/config/: controller.yaml
ros/rbc_base/launch/: arduino_bridge.launch  controller.launch
ros/rbc_base/msg/: BaseAdaptiveState.msg  BaseParameters.msg  BaseSetpoint.msg  BaseState.msg  MotorAdaptiveState.msg  MotorParameters.msg
ros/rbc_base/scripts/: controller_tests.html  debug_topics.py  robodev.py
ros/rbc_base/src/control/hardware/: main.cpp  robot_hw.h
ros/rbc_base/src/control/hardware_parameter_server/: hardware_parameter_server.h
ros/rbc_base/src/control/omniwheel_base_controller/: holonomic_kinematics.h  old_holonomic_kinematics.h  omniwheel_base_controller.cpp  omniwheel_base_controller_plugins.xml
ros/rbc_core/: CMakeLists.txt  package.xml
ros/rbc_dev/: CMakeLists.txt  package.xml
ros/rbc_manager/: CMakeLists.txt  package.xml
ros/rbc_manager/launch/: test.launch
ros/rbc_manager/scripts/: state_manager.py
ros/rbc_manager/scripts/roslaunch_integration/: base_state.py  initialization.py  roslaunch_smach.py
ros/rbc_manager/scripts/states/: initialization.py  manual.py  ready.py  scan.py  stop.py
ros/rbc_navigation/: CMakeLists.txt  package.xml
ros/rbc_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  map.yaml  mapper_params_lifelong.yaml
ros/rbc_navigation/description/: inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
ros/rbc_navigation/launch/: move_base.launch  slam.launch
ros/rbc_test/: CMakeLists.txt  package.xml
ros/rbc_web_interface/: CMakeLists.txt  _package.xml
setup/: README.md  convenience.sh  setup.bat  setup.sh
setup/orbbec/: orbbec_setup.sh
(+143 files in other folders)
