<?xml version="1.0"?>
<package>
  <name>ackermann_vehicle_description</name>
  <version>0.1.3</version>
  <description>
    ackermann_vehicle_description contains the description (3D model, kinematics, mass, etc.) of a vehicle with Ackermann steering.
  </description>

  <maintainer email="jim.rothrock@wunderkammerlab.com">Jim Rothrock</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/ackermann_vehicle_description</url>
  <url type="bugtracker">https://github.com/wunderkammer-laboratory/ackermann_vehicle/issues</url>
  <url type="repository">https://github.com/wunderkammer-laboratory/ackermann_vehicle.git</url>

  <author email="jim.rothrock@wunderkammerlab.com">Jim Rothrock</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_models</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
