<?xml version="1.0"?>
<package format="2">
  <name>fsai_mission</name>
  <version>0.0.0</version>
  <description>The fsai_mission package</description>

  <maintainer email="kenneth.liu.k.h@gmail.com">ugsfume</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ultralytics_ros</build_depend>
  <build_depend>fsai_api</build_depend>  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ultralytics_ros</build_export_depend>
  <build_export_depend>fsai_api</build_export_depend>  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ultralytics_ros</exec_depend>
  <exec_depend>fsai_api</exec_depend>  

  <export>
  </export>
</package>
