<?xml version="1.0"?>
<package format="2">
  <name>gra_recording</name>
  <version>0.0.0</version>
  <description>The gra_recording package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>hector_models</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <!-- Uses robot model from ackermann_vehicle_description -->
  <exec_depend>ackermann_vehicle_description</exec_depend>

  <export>
  </export>
</package>
