<?xml version="1.0"?>
<package format="2">
  <name>rbc_manager</name>
  <version>0.0.0</version>
  <description>Robocapture state manager package</description>

  <maintainer email="shiukaheng2@gmail.com">Shiu Ka Heng</maintainer>

  <license>GPL v3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>python3</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>smach_msgs</exec_depend>

</package>
